@@ -204,7 +204,8 @@ you really need to have it (or think you do)::
 
 --- !python |
 import sys
-from ruamel.yaml import YAML from ruamel.yaml.compat import StringIO
+from ruamel.yaml import YAML 
+from ruamel.yaml.compat import StringIO
 
 class MyYAML(YAML):
     def dump(self, data, stream=None, **kw):
